# flashcard

./: CMakeLists.txt  flashcard_app.c  flashcard_app.h  flashcard_app_win.c  flashcard_app_win.h  main.c
